styles/globals.css
/* ... */
.animated-cards-tri::before {
  @apply pointer-events-none absolute select-none rounded-3xl opacity-0 transition-opacity duration-300 hover:opacity-100;
  background: radial-gradient(
    1000px circle at var(--x) var(--y),
    #bf00ff76 0,
    /* #eebbe2b3 10%, */
    #f25cbdb5 25%,
    rgba(255, 255, 255, 0) 50%,
    transparent 20%
  );
  /* , url("https://d3e0o4zthiks52.cloudfront.net/ey_logo_white.svg"); */
  
  background-repeat:  no-repeat;
  background-position: 0 0, 100%;
  background-size: auto, cover;
  z-index: -1;
  content: "";
  inset: -1px;
}
.animated-cards-bg {
  
}
 .CIAAN-herobg {
  background:linear-gradient(114deg, rgba(75,0,48,0.9) 0%, rgba(255,76,139,0.5) 100%);
  background-size:cover;
  /* background: rgb(75,0,48);
  background: linear-gradient(114deg, rgba(75,0,48,0.9) 0%, rgba(255,76,139,0.5) 100%); */
 }
 .CIAAN-bg {
  background:linear-gradient(114deg, rgba(75,0,48,0.9) 0%, rgba(255,76,139,0.5) 100%);
  background-size:cover;
  /* background: rgb(75,0,48);
  background: linear-gradient(114deg, rgba(75,0,48,0.9) 0%, rgba(255,76,139,0.5) 100%); */
 }
 .animated-cards-border-bg-scas {
  background:linear-gradient(114deg, rgba(75,0,48,0.9) 0%, rgba(255,76,139,0.5) 100%);
  background-size:cover;
  /* background: rgb(75,0,48);
  background: linear-gradient(114deg, rgba(75,0,48,0.9) 0%, rgba(255,76,139,0.5) 100%); */
 }
 .animated-cards-border-bg-tri {
  background:  linear-gradient(114deg, rgb(1 23 24) 0%, rgb(76 246 255 / 39%) 100%);
  ;
  background-size:cover;
  /* background: rgb(75,0,48);
  background: linear-gradient(114deg, rgba(75,0,48,0.9) 0%, rgba(255,76,139,0.5) 100%); */
 }
body::before{
  content:"";
  position:absolute;
  inset:0;
  z-index:-2;
  background:url("https://d3e0o4zthiks52.cloudfront.net/ey_logo_white.svg");
  background-size:cover;
  opacity:0.2;
  }
  
  body::after{
  content:"";
  position:absolute;
  inset:0;
  z-index:-1;
  background:#cccccc;
  opacity:0.3;
  }
  
.testbg::before{
  background-image: linear-gradient(rgb(255 255 255), rgb(245 250 255 / 97%)), url(https://d3e0o4zthiks52.cloudfront.net/ey_logo_white.svg);
  background: #00FF99;

  position:absolute;
  inset:0;
  z-index:5;
  background-size:cover;
 
  }
  .portfolio-bento {
    background-image: linear-gradient(60deg, #4b0030e6 30%, #ff4c8b80);
  }
  .navbg {
    border-radius: 8px;

    backdrop-filter: blur(2px);
    background-color: #46133899;
    background-image: linear-gradient(341deg, #a3279100, #46012b42 55%, #ff5be717);
  }
  .stickyNav {
   

    z-index: 30;
    box-shadow: none;
    align-items: flex-start;
  
  
    display: flex;
    position: sticky;
    inset: 147px 6px auto 33px;
  }
  .nav-menu-swatch {
    opacity: 1;
    border-radius: 0;
    flex: 0 auto;
    justify-content: space-around;
    align-self: stretch;
    align-items: flex-end;
    width: 100%;
    height: 4.5px;
    margin-top: 0;
    display: flex
;
}
.aboutMe {
  -webkit-backdrop-filter: blur(14px);
  backdrop-filter: blur(14px);
  background-color: #00000021;
  background-image: linear-gradient(139deg, #000a145c, #f8fbff00);
  justify-content: center;
  align-self: center;

;
  box-shadow: 0 0 200px #50bfff1f;
}
.aboutMe1{
  background-image: radial-gradient(circle at 100% 100%, #247f9b52, #fff0 63%);
}
.aboutMePic {
  background-image: url(https://cdn.prod.website-files.com/60ed4aeb79e554d52f0d9608/64f640c054e53ad5310a13b6_headshot.jpg);
  background-position: 65%;
  background-size: cover;
 
  box-shadow: 0 1px 20px #6ee4ff1b;
}
.aboutMe2{
  backdrop-filter: brightness() blur(3px);
  background-color: #1c495263;

  justify-content: center;
  place-items: start center;
  padding: 36px 37px 38px;

;
  box-shadow: inset 0 0 20px #279bdf26;}
  .rcs-tri-text {
    -webkit-background-clip: text !important;
    /* text-shadow: 0px 4px 42px rgb(0 182 243 / 15%); */
    -webkit-text-fill-color: transparent;
    background: linear-gradient(180deg, #1d0c3f 27%, #00887e 90%);
   /* background: white; */
    /* background: linear-gradient(180deg, #000000 27%, #1d4e5c 90%); */
    filter: saturate(1);
    transition: all .4s cubic-bezier(.743,.831,.17,.75);

    }
    .rcs-tri-text:hover {
      -webkit-background-clip: text !important;
      /* text-shadow: 0px 4px 42px rgb(0 182 243 / 15%); */
      -webkit-text-fill-color: transparent;
      background:linear-gradient(180deg, #3c7281 27%, #1b5c5a 40%);
      
      transition: all .4s cubic-bezier(.743,.831,.17,.75);
      /* background: linear-gradient(180deg, #000000 27%, #1d4e5c 90%); */
      }
  .rcs-tri{
    background-image: linear-gradient(#f1f1ff, #dddded), linear-gradient(#016748 50%, rgb(255 255 255 / 63%) 80%, rgb(0 16 163 / 32%)), linear-gradient(90deg, #56b6ff, hsl(159.82deg 88.83% 35.77%), hsl(165.37deg 100% 50% / 93%), #62b5a78f);
    filter:  brightness(1) saturate(1)  drop-shadow(0 0px 0px #ff00a200);
    transition: all .4s cubic-bezier(.743,.831,.17,.75);

  }
  .rcs-tri:hover {
filter:brightness(1) saturate(1)  drop-shadow(0 2px 24px #00ffc86b);
transition: all .4s !important;
  }
  .rcs-tri:before {
    content: "";
    background-image: linear-gradient(hsl(160.33deg 100% 50% / 97%), hsl(185.51deg 100% 65% / 51%), hsl(167.88deg 100% 50%));
    transition:  all .4s cubic-bezier(.743,.831,.17,.75);
filter: blur(calc(0.8* 1rem)) brightness(1) drop-shadow(0 0px 0px #ff00a200) ;
  }
  /* .rcs-scas::before :hover {
    content: "";
    background-image: linear-gradient(hsla(1, 100%, 50%, 0.97), hsla(0, 0%, 100%, 0.85), hsl(0deg 100% 50%));
  } */
  .rcs-tri:hover:before  {
    content: "";
    filter: blur(calc(0.8* 1rem)) brightness(1) saturate(1) drop-shadow(16px 16px 20px #ff28d0);
    /* background-image: linear-gradient(hsl(26.91deg 100% 50% / 97%), hsl(52.08deg 100% 64.75% / 85%), hsl(0deg 100% 50%)); */
    transition: all .4s cubic-bezier(.743,.831,.17,.75);
  }
/* ... */

